DigicielFull/force-app/main/default/objects/amc__Skill_Assignment__c/amc__Skill_Assignment__c.object-meta.xml
<CustomObject>
    <description>Used to assign a Skill to a Role.</description>
    <label>Skill Assignment</label>
    <nameField>
        <displayFormat>SA{0}</displayFormat>
        <label>Skill Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>