DigicielFull/force-app/main/default/objects/amc__Skill_Assignment__c/fields/amc__Billable_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Billable_Hourly_Rate__c</fullName>
    <description>Identifies the rate the role will be billed out to the client at for performing this skill/service</description>
    <inlineHelpText>Identifies the rate the role will be billed out to the client at for performing this skill/service</inlineHelpText>
    <label>Billable Hourly Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>