DigicielFull/force-app/main/default/objects/amc__Skill_Assignment__c/fields/amc__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>