DigicielFull/force-app/main/default/objects/amc__Skill_Assignment__c/fields/amc__Proficiency__c.field-meta.xml
<CustomField>
    <fullName>amc__Proficiency__c</fullName>
    <description>Describes the proficiency of the Role and a particular Skill</description>
    <label>Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>