DigicielFull/force-app/main/default/objects/amc__Skill_Assignment__c/fields/amc__Role__c.field-meta.xml
<CustomField>
    <fullName>amc__Role__c</fullName>
    <label>Role</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Skill Assignments</relationshipLabel>
    <relationshipName>Skill_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>