DigicielFull/force-app/main/default/objects/amc__Skill_Assignment__c/fields/amc__Skill__c.field-meta.xml
<CustomField>
    <fullName>amc__Skill__c</fullName>
    <label>Skill</label>
    <referenceTo>amc__Skill__c</referenceTo>
    <relationshipLabel>Skill Assignments</relationshipLabel>
    <relationshipName>Skill_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>